# Task

./: README.md  docker-compose.yaml
api/: Dockerfile  README.md  pyproject.toml
api/src/: autosuggest.py  health.py  main.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: autosuggest.tsx
frontend/src/components/: AutoSuggest.tsx
