[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["aryaman-sh <aryaman.sharma@uqconnect.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
